--- a/.github/expense-tracker-front/acorn-html-starter-project/src/css/main.css
+++ b/.github/expense-tracker-front/acorn-html-starter-project/src/css/main.css
@@ -1,38 +1,26 @@
 /* This file is reserved for overriding and extending the template styles. */
 
-.roller-text{
+.fade-text{
     display: inline-block;
 	position: relative;
 }
 
-.roller-text p{
+.fade-text p{
 	display: inline-block;
 	opacity: 0;
-	animation-timing-function: ease;
 }
 
-.roller-text p:nth-child(1){
-	animation: rollDown 4s forwards;
+.fade-text-active p:nth-child(1){
+	-webkit-animation: fadeinout 4s ease forwards;
+    animation: fadeinout 4s ease forwards;
 }
 
-@keyframes rollDown {
-	0%{
-		top: -200px;
-		transform: rotateX(-90deg);
-	}
-	33%{
-		top: -74px;
-		transform: rotateX(0deg);
-		opacity: 1;
-	}
-	66%{
-		top: -74px;
-		transform: rotateX(0deg);
-		opacity: 1;
-	}
-	100%{
-		top: 50px;
-		transform: rotateX(30deg);
-		opacity: 0;
-	}
+@-webkit-keyframes fadeinout {
+	0%,100% { opacity: 0; }
+	50% { opacity: 1; }
+}
+  
+@keyframes fadeinout {
+	0%,100% { opacity: 0; }
+	50% { opacity: 1; }
 }
